added .idea kai .vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
     ],
-    "githubPullRequests.ignoredPullRequestBranches": [
-        "main"
-    ]
+    "sonarlint.connectedMode.project": {
+        "connectionId": "georgiosnikitas",
+        "projectKey": "georgiosnikitas_scrap"
+    }
 }
